--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>2.27.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>12.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
