--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <mainClass>hellofx/org.openjfx.App</mainClass>
+                    <mainClass>HelloFX</mainClass>
                 </configuration>
             </plugin>
 
