--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.1</version>
                 <configuration>
-                    <mainClass>HelloFX</mainClass>
+                    <mainClass>AdrenalineView</mainClass>
                 </configuration>
             </plugin>
 
@@ -131,7 +131,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <mainClass>HelloFX</mainClass>
+                    <mainClass>AdrenalineView</mainClass>
                 </configuration>
             </plugin>
 
