JavaFX file positions corrected

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     </properties>
 
 
-
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -117,21 +116,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.1</version>
-                <configuration>
-                    <mainClass>AdrenalineView</mainClass>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <mainClass>AdrenalineView</mainClass>
+                    <mainClass>Adrenaline.Client.view.AdrenalineView</mainClass>
                 </configuration>
             </plugin>
 
